# polarsteps-mcp

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  Dockerfile  Justfile  LICENSE  LICENSE.md  README.md  main.py  pyproject.toml  smithery.yaml
examples/: basic_usage.py  claude_desktop_config.json
polarsteps_mcp/: __init__.py  server.py
src/polarsteps_mcp/: __init__.py  __main__.py  server.py  tools.py  utils.py
tests/: conftest.py  test_server.py  test_tools.py  test_utils.py
