[project]
name = "polarsteps-mcp"
version = "0.1.0"
description = "MCP server for Polarsteps API - enables Claude and other MCP clients to interact with travel data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "polarsteps-api @ file:///home/remuzel/workplace/polarstep/polarsteps-api",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]
authors = [
    {name = "Remuzel", email = "remikaanuzel@gmail.com"}
]
license = {file = "LICENSE"}
keywords = ["mcp", "polarsteps", "travel", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
polarsteps-mcp = "polarsteps_mcp.server:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "PIE", "SIM", "RET"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
